terraform/kubernetes/frontend-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-admin
  template:
    metadata:
      labels:
        app: frontend-admin
    spec:
      containers:
        - name: frontend-admin
          image: 903479130308.dkr.ecr.us-east-1.amazonaws.com/frontend-admin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-admin-service
spec:
  selector:
    app: frontend-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
