terraform/kubernetes/frontend-public-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-public
  template:
    metadata:
      labels:
        app: frontend-public
    spec:
      containers:
        - name: frontend-public
          image: 903479130308.dkr.ecr.us-east-1.amazonaws.com/frontend-public:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-public-service
spec:
  selector:
    app: frontend-public
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
